unpackaged/main/default/objects/fferpcore__ProcessTracking__c/fferpcore__ProcessTracking__c.object-meta.xml
<CustomObject>
    <label>Process Tracking</label>
    <nameField>
        <label>ProcessState Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>