unpackaged/main/default/objects/fferpcore__ProcessTracking__c/fields/fferpcore__MessageData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageData__c</fullName>
    <description>Data collected from the process responses received, which is to be forwarded with the completion message.</description>
    <inlineHelpText>Data collected from the process responses received, which is to be forwarded with the completion message.</inlineHelpText>
    <label>Message Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>