unpackaged/main/default/objects/fferpcore__ProcessTracking__c/fields/fferpcore__OutstandingResponses__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__OutstandingResponses__c</fullName>
    <description>The number of responses waiting to be received.</description>
    <inlineHelpText>The number of responses waiting to be received.</inlineHelpText>
    <label>Outstanding Responses</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>