unpackaged/main/default/objects/fferpcore__ProcessTracking__c/fields/fferpcore__ProcessToken__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProcessToken__c</fullName>
    <description>Token used to validate messages associated with this process tracking record.</description>
    <inlineHelpText>Token used to validate messages associated with this process tracking record.</inlineHelpText>
    <label>Process Token</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>